# credit-risk-classification

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  styles.py
Notebooks/: EDA.ipynb
data/: merged_df.csv  merged_df_organizado.xlsx
data/processed/: 01_datos_crudos_cooperativa.parquet  02_datos_ajustados_cooperativa.parquet
models/: gbc_best_model.joblib  lightgbm_best_model.joblib  lightgbm_tuned_model.joblib  lightgbm_tuned_model.pkl
notebooks/: 01_descarga_datos.ipynb  02_ajuste_tratamiento_datos.ipynb  03_EDA.ipynb  04.AutoML.ipynb  05_entrenamiento_modelo.ipynb  06_interpretación_modelos.ipynb
tabs/: eda.py  models.py  overview.py  predictor.py
utils/: loaders.py  metrics.py
