[project]
name = "credit-risk-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    "ipykernel>=6.29.0",
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
    "nbformat>=5.9.0",
    "notebook>=7.0.0",
    "numpy",
    "pandas",
    "plotly",
    "pycaret==3.3.2",
    "scipy",
    "seaborn",
    "statsmodels",
    "streamlit",
]
